update feedback footer link

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
@@ -65,8 +65,7 @@
         { "Text": "Cookies" },
         {
           "Text": "Feedback survey",
-          "ConfigUrl": "FamilyHubsUi:FeedbackUrl",
-          "OpenInNewTab": true
+          "ConfigUrl": "FamilyHubsUi:FeedbackUrl"
         },
         { "Text": "Privacy" },
         { "Text": "Terms and conditions" }
