move inline scripts from cshtml files into app.ts, enable dyncamic creation of app.js

--- a/.gitignore
+++ b/.gitignore
@@ -350,3 +350,4 @@ MigrationBackup/
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 .idea
+src/FamilyHubs.ServiceDirectory.Admin.Web/tmp/**
