Add subject access request (#264)
* Add Getting Persons Details and showing initial results

* Added Request Details page

* Fixed back button

* Moved Subject Access Requests to another location

* Added Unit Tests

* Modified Validation

* Fixed Error Messages

* Fixed Unit Tests

* Tweak to error messages for Subject Access Request

* Added Authorize Attribute to RequestDetailsModel

* Removed commented out code

* Delete src/FamilyHubs.ServiceDirectory.Admin.Web/ScaffoldingReadMe.txt

Removed unwanted file

---------

Co-authored-by: Martin-Belton-gov <martin.belton@digital.education.gov.uk>

--- a/src/FamilyHubs.ServiceDirectory.Admin.Core/FamilyHubs.ServiceDirectory.Admin.Core.csproj
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Core/FamilyHubs.ServiceDirectory.Admin.Core.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="DotNetCore.NPOI" Version="1.2.3" />
     <PackageReference Include="FamilyHubs.Notification.Api.Client" Version="1.1.1" />
     <PackageReference Include="FamilyHubs.Notification.Api.Contracts" Version="1.0.3" />
+    <PackageReference Include="FamilyHubs.ReferralService.Shared" Version="1.0.15" />
     <PackageReference Include="FamilyHubs.ServiceDirectory.Shared" Version="2.0.6" />
     <PackageReference Include="FamilyHubs.SharedKernel" Version="2.0.51" />
     <PackageReference Include="FamilyHubs.SharedKernel.Razor" Version="5.2.0" />
