new index page content with links to other apps

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
@@ -39,7 +39,8 @@
     "SupportEmail": "manage-family-support.service@education.gov.uk",
     "Urls": {
       "ConnectWeb": "https://localhost:7270/",
-      "ManageWeb": "https://localhost:7216/"
+      "ManageWeb": "https://localhost:7216/",
+      "FindWeb": "https://localhost:7199"
     },
     "Analytics": {
       "CookieName": "manage_family_support_cookies_policy",
