use fam hub health check

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
@@ -42,6 +42,25 @@
       "ManageWeb": "https://localhost:7216/",
       "FindWeb": "https://localhost:7199"
     },
+    "HealthCheck": {
+      "Enabled": true,
+      "InternalApis": {
+        "Service Directory API": {
+          "ConfigUrl": "ServiceDirectoryApiBaseUrl"
+        },
+        "Referral API": {
+          "ConfigUrl": "ReferralApiBaseUrl"
+        },
+        "Idams API": {
+          "ConfigUrl": "GovUkOidcConfiguration:IdamsApiBaseUrl"
+        }
+      },
+      "Databases": {
+        "Cache": {
+          "ConfigConnectionString": "CacheConnection"
+        }
+      }
+    },
     "Analytics": {
       "CookieName": "manage_family_support_cookies_policy",
       "CookieVersion": 1,
