fix issue with name clash between .net and health check package, see https://github.com/dotnet/aspnetcore/issues/50836

--- a/src/FamilyHubs.ServiceDirectory.Admin.Core/FamilyHubs.ServiceDirectory.Admin.Core.csproj
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Core/FamilyHubs.ServiceDirectory.Admin.Core.csproj
@@ -10,7 +10,7 @@
     <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
   </PropertyGroup>
   <PropertyGroup>
-    <NoWarn>S1135</NoWarn>
+    <NoWarn>S1135;AD0001</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="AspNetCore.HealthChecks.AzureKeyVault" Version="7.0.0" />
