--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/FamilyHubs.ServiceDirectory.Admin.Web.csproj
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/FamilyHubs.ServiceDirectory.Admin.Web.csproj
@@ -8,13 +8,13 @@
   </PropertyGroup>
 
 	<PropertyGroup>
-		<TreatWarningsAsErrors>True</TreatWarningsAsErrors>
+		<!--<TreatWarningsAsErrors>True</TreatWarningsAsErrors>-->
 		<EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
 		<TypeScriptCompileBlocked>true</TypeScriptCompileBlocked>
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<NoWarn>S1135</NoWarn>
+		<NoWarn>S101;S125;S1135</NoWarn>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -36,10 +36,10 @@
     <PackageReference Include="Serilog.Extensions.Hosting" Version="7.0.0" />
     <PackageReference Include="Serilog.Sinks.ApplicationInsights" Version="4.0.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="5.0.0" />
-    <!--<PackageReference Include="SonarAnalyzer.CSharp" Version="9.12.0.78982">
+    <PackageReference Include="SonarAnalyzer.CSharp" Version="9.12.0.78982">
 	    <PrivateAssets>all</PrivateAssets>
 	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>-->
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
