--- a/src/FamilyHubs.ServiceDirectory.Admin.Core/FamilyHubs.ServiceDirectory.Admin.Core.csproj
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Core/FamilyHubs.ServiceDirectory.Admin.Core.csproj
@@ -23,12 +23,12 @@
     <PackageReference Include="FamilyHubs.Notification.Api.Client" Version="1.1.1" />
     <PackageReference Include="FamilyHubs.Notification.Api.Contracts" Version="1.0.3" />
     <PackageReference Include="FamilyHubs.ReferralService.Shared" Version="1.0.15" />
-    <PackageReference Include="FamilyHubs.ServiceDirectory.Shared" Version="3.0.0-rc" />
+    <PackageReference Include="FamilyHubs.ServiceDirectory.Shared" Version="3.1.0" />
     <PackageReference Include="FamilyHubs.SharedKernel" Version="2.1.1" />
     <PackageReference Include="FamilyHubs.SharedKernel.Razor" Version="6.4.0" />
     <PackageReference Include="GovukNotify" Version="6.1.0" />
     <PackageReference Include="Microsoft.Extensions.Caching.SqlServer" Version="7.0.14" />
-    <PackageReference Include="SonarAnalyzer.CSharp" Version="9.9.0.77355">
+    <PackageReference Include="SonarAnalyzer.CSharp" Version="9.15.0.81779">
 	    <PrivateAssets>all</PrivateAssets>
 	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
