switch postcodes io health check to use config

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
@@ -56,6 +56,11 @@
           "ConfigUrl": "GovUkOidcConfiguration:IdamsApiBaseUrl"
         }
       },
+      "ExternalApis": {
+        "Postcodes.Io": {
+          "Url": "https://api.postcodes.io/postcodes/SW1A2AA"
+        }
+      },
       "Databases": {
         "Cache": {
           "ConfigConnectionString": "CacheConnection"
