Add location feature and error handling
Updated `FamilyHubs.ServiceDirectory.Admin.Core.csproj` to treat warnings as errors. Added `Add_Location__MissingSelection` enumeration value to `ErrorId.cs` and `ServiceJourneyPage.cs` for handling new location-related error. Introduced `AddLocations` property in `ServiceModel.cs` to indicate if locations should be added. Enhanced `TelemetryPiiRedactor.cs` to redact sensitive info in telemetry data when `DeleteAllUserSessions` string is found. Updated `PossibleErrors.cs` to include new error message for missing location selection during service creation. Added new Razor page `add-location.cshtml` and its code-behind file for handling user response on adding locations.

--- a/src/FamilyHubs.ServiceDirectory.Admin.Core/FamilyHubs.ServiceDirectory.Admin.Core.csproj
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Core/FamilyHubs.ServiceDirectory.Admin.Core.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
 	<PropertyGroup>
-		<!--<TreatWarningsAsErrors>True</TreatWarningsAsErrors>-->
+		<TreatWarningsAsErrors>True</TreatWarningsAsErrors>
 		<EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
 	</PropertyGroup>
 
