--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/FamilyHubs.ServiceDirectory.Admin.Web.csproj
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/FamilyHubs.ServiceDirectory.Admin.Web.csproj
@@ -25,7 +25,7 @@
 	</ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="FamilyHubs.ServiceDirectory.Shared" Version="8.0.0-pre3" />
+    <PackageReference Include="FamilyHubs.ServiceDirectory.Shared" Version="8.0.0" />
     <PackageReference Include="FamilyHubs.SharedKernel.Razor" Version="9.1.3" />
     <PackageReference Include="Microsoft.ApplicationInsights" Version="2.22.0" />
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.22.0" />
