feat: add microsoft clarity analytics

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
@@ -71,7 +71,8 @@
       "CookieName": "manage_family_support_cookies_policy",
       "CookieVersion": 1,
       "MeasurementId": "",
-      "ContainerId": ""
+      "ContainerId": "",
+      "ClarityId": "lwxri5if2d"
     },
     "Header": {
       "ActionLinks": [
