--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
@@ -8,6 +8,7 @@
   "IsUploadSpreadsheetEnabled": true,
   "ServiceDirectoryApiBaseUrl": "https://localhost:7022/",
   "ReferralApiBaseUrl": "https://localhost:7192/",
+  "ReportingApiBaseUrl": "https://localhost:7100/",
   "IdamApi": "https://localhost:7030/",
   "GovUkLoginAccountPage": "https://home.integration.account.gov.uk",
   "GovUkOidcConfiguration": {
