--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
@@ -41,7 +41,8 @@
       "ConnectWeb": "https://localhost:7270/",
       "ManageWeb": "https://localhost:7216/",
       "FindWeb": "https://localhost:7199",
-      "PostcodesIo": "https://api.postcodes.io/postcodes/"
+      "PostcodesIo": "https://api.postcodes.io/postcodes/",
+      "Ai": "http://localhost:1234"
     },
     "HealthCheck": {
       "Enabled": true,
